--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,30 @@
   padding: 0;
   margin: 0;
 }
-
-html, body, #root {
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
+}
+html {
+  --color_primary: #98ecff;
+  --color_primary-alternative: #0074cc;
+  --color_secondary: rgb(255, 229, 112);
+  --color_bg: rgb(0, 0, 0);
+}
+
+.titleText {
+  font-family: 'Tr2n';
+  color: #bce2eb;
+  text-shadow: 0 0 30px rgba(11, 198, 255, 0.8), 0 0 20px rgb(57, 184, 224),
+    0 0 5px rgb(29, 202, 255);
+}
+
+.simpleText {
+  font-family: 'Orbitron', sans-serif;
+  color: rgb(255, 249, 194);
+  text-shadow: 0 0 30px rgba(255, 179, 38, 0.8), 0 0 20px rgb(252, 255, 83),
+    0 0 5px rgb(255, 234, 46);
 }
