--- a/src/components/Signup/style.css
+++ b/src/components/Signup/style.css
@@ -1,19 +1,23 @@
 .sign-up-menu {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: url('../../assets/bg2.jpg') no-repeat 100% center;
+  background: url('../../assets/bg2.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.tron-logo {
+  margin-top: 5%;
+  max-width: 300px;
 }
 
 .sign-up-wrapper {
   color: white;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  width: 270px;
+  width: 370px;
   padding: 20px;
   text-align: center;
   background-color: black;
@@ -24,6 +28,14 @@
   border-radius: 25px;
 }
 
+@media (max-width: 600px) {
+  .sign-up-wrapper {
+    max-width: 250px;
+  }
+}
+
 .sign-up-menu .input-wrapper {
+  display: flex;
+  flex-direction: column;
   margin: 30px 0 20px 0;
 }
