--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
 
 @font-face {
-  font-family: "Tr2n"; 
-  src: url("./assets/Tr2n.ttf") format("truetype"); 
-  font-style: normal; 
-  font-weight: normal; 
-} 
+  font-family: 'Tr2n';
+  src: url('./assets/Tr2n.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
 
 html,
 body,
@@ -36,4 +36,10 @@ html {
   color: rgb(255, 249, 194);
   text-shadow: 0 0 30px rgba(255, 179, 38, 0.8), 0 0 20px rgb(252, 255, 83),
     0 0 5px rgb(255, 234, 46);
+}
+.less-important-text {
+  font-family: 'Orbitron', sans-serif;
+  color: var(--color_primary);
+  text-shadow: 0 0 30px rgba(11, 198, 255, 0.8), 0 0 20px rgb(57, 184, 224),
+    0 0 5px rgb(29, 202, 255);
 }
