--- a/src/components/AuthForm/style.css
+++ b/src/components/AuthForm/style.css
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: column;
   margin: 30px 0 20px 0;
+  position: relative;
 }
 .welcome-text {
   margin-top: 16%;
@@ -49,10 +50,25 @@
 .noUser-wrapper > p:first-child {
   margin: 20px;
 }
-/* .noUser-wrapper > .btn {
 
-  width: 100%;
-} */
+.visibility-control {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background: url('../../assets/not-visible-icon.png') no-repeat center;
+  background-size: contain;
+  right: 22px;
+  top: 83px;
+  opacity: 0.5;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.visibility-control:hover {
+  opacity: 1;
+}
+.visibility-control_visible {
+  background: url('../../assets/visible-icon.png') no-repeat center;
+}
 
 @media (max-width: 500px) {
   .signin-menu_wrapper {
