--- a/src/components/Signup/style.css
+++ b/src/components/Signup/style.css
@@ -7,6 +7,15 @@
   background: url('../../assets/bg2.jpg') no-repeat center;
   background-size: cover;
 }
+.baseInput_wrapper {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: stretch;
+}
+.baseInput_wrapper .input {
+  width: 100%;
+}
 
 .tron-logo {
   margin-top: 5%;
@@ -26,6 +35,7 @@
   box-shadow: 0 0 7px rgba(9, 198, 255, 0.8), 0 0 4px rgb(57, 184, 224),
     inset 0 0 7px rgb(29, 202, 255);
   border-radius: 25px;
+  position: relative;
 }
 .sign-in_text {
   margin-top: 20px;
@@ -34,6 +44,24 @@
   margin-top: 20%;
   font-size: 2.5rem;
   text-align: center;
+}
+.visibility-control {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background: url('../../assets/not-visible-icon.png') no-repeat center;
+  background-size: contain;
+  right: 22px;
+  top: 18px;
+  opacity: 0.5;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.visibility-control:hover {
+  opacity: 1;
+}
+.visibility-control_visible {
+  background: url('../../assets/visible-icon.png') no-repeat center;
 }
 
 @media (max-width: 600px) {
