--- a/src/components/Loader/style.css
+++ b/src/components/Loader/style.css
@@ -1,3 +1,16 @@
+.loader {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Tr2n', sans-serif;
+  transform: none !important;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 .preloader__container {
   min-height: calc(100vh);
   width: 100%;
