--- a/src/components/GameMenu/style.css
+++ b/src/components/GameMenu/style.css
@@ -21,19 +21,19 @@
   margin-top: 20px;
   text-align: center;
 }
-.game-menu__wrapper .main-menu {
+.game-menu__main-menu {
   max-width: 350px;
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   padding: 10px;
 }
-.game-menu__wrapper .main-menu > .btn:first-child {
+.game-menu__main-menu > .btn:first-child {
   font-size: 2.3rem;
   margin-bottom: 30px;
 }
 
-.game-menu__wrapper .main-menu > .btn:last-child {
+.game-menu__main-menu > .btn:last-child {
   margin-top: 30px;
 }
 .instructions__wrapper {
