--- a/src/components/Signup/style.css
+++ b/src/components/Signup/style.css
@@ -45,7 +45,7 @@
   font-size: 2.5rem;
   text-align: center;
 }
-.visibility-control {
+.sign-up-wrapper .visibility-control {
   width: 24px;
   height: 24px;
   position: absolute;
@@ -57,10 +57,10 @@
   cursor: pointer;
   transition: 0.3s;
 }
-.visibility-control:hover {
+.sign-up-wrapper .visibility-control:hover {
   opacity: 1;
 }
-.visibility-control_visible {
+.sign-up-wrapper .visibility-control_visible {
   background: url('../../assets/visible-icon.png') no-repeat center;
 }
 
