--- a/src/components/MainMenu/style.css
+++ b/src/components/MainMenu/style.css
@@ -46,11 +46,17 @@
 }
 
 @media (max-width: 700px) {
+  .main-menu__container {
+    max-width: 320px;
+  }
   .tron-logo {
     max-width: 500px;
   }
 }
 @media (max-width: 600px) {
+  .main-menu__container {
+    max-width: 300px;
+  }
   .tron-logo {
     max-width: 400px;
   }
