--- a/src/components/BaseButton/style.css
+++ b/src/components/BaseButton/style.css
@@ -14,6 +14,7 @@
   box-shadow: 0 0 7px rgba(9, 198, 255, 0.8), 0 0 4px rgb(57, 184, 224),
     inset 0 0 7px rgb(29, 202, 255);
   transition: 0.3s;
+  user-select: none;
 }
 .btn:hover {
   color: var(--color_secondary);
