--- a/src/components/AuthForm/style.css
+++ b/src/components/AuthForm/style.css
@@ -2,22 +2,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100vw;
   height: 100vh;
   background: url('../../assets/bg2.jpg') no-repeat center;
   background-size: cover;
 }
 
-.tron-logo {
-  margin-top: 5%;
-  max-width: 300px;
+.signin-menu .tron-logo {
+  max-width: 600px;
+  width: 100%;
 }
 
 .signin-menu_wrapper {
   color: white;
   display: flex;
   flex-direction: column;
-  width: 370px;
+  width: 490px;
   padding: 20px;
   text-align: center;
   background-color: black;
@@ -70,8 +71,8 @@
   background: url('../../assets/visible-icon.png') no-repeat center;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 560px) {
   .signin-menu_wrapper {
-    max-width: 250px;
+    max-width: 300px;
   }
 }
