fix:fix finish game styles screen and canvas loader

--- a/src/components/FinishGame/style.css
+++ b/src/components/FinishGame/style.css
@@ -17,6 +17,6 @@
 
 .window-loses__wrapper-btn {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 30px;
 }
